Notifications, dof, gender

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,3 +274,7 @@ md-checkbox.md-checked.checkBoxColor .md-icon {
     color: #dd2c00;
     margin-left: 15px; }
 
+
+
+/* NOTIFICATIONS STYLES */
+
