--- a/public/css/style.css
+++ b/public/css/style.css
@@ -285,7 +285,9 @@ md-checkbox.md-checked.checkBoxColor .md-icon {
 }
 
 
-
+.thumbnail a>img, .thumbnail>img{
+	width: 100%;
+}
 
 
 /*Date picker*/
