Responsive 3 without merge error

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -287,6 +287,9 @@ md-checkbox.md-checked.checkBoxColor .md-icon {
 
 
 
+.thumbnail a>img, .thumbnail>img{
+   width: 100%;
+ }
 
 /*Date picker*/
 
