--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,11 +103,29 @@ md-checkbox.md-checked.checkBoxColor .md-icon {
   margin-top: 6px;
 }
 @font-face {font-family:='mynexa'; scr:url(../fonts/Nexa.woff);}
+@font-face {
+	font-family: "Somatic-Rounded";
+	src: url(../fonts/Somatic-Rounded_0.otf) format("truetype");
+}
+@font-face {
+	font-family: "proxima-nova";
+	src: url(../fonts/proxima-nova.otf) format("truetype");
+}
+*{
+	font-family: 'proxima-nova',sans-serif !important;
+}
+
+label{
+	color:black !important;
+}
+.md-select-value span{
+	color:black;
+	font-weight: bold;
+}
 #cover {
 
   width: 100%;
-  height: 730px;
-  background-image: url(../images/cover.png); 
+  background-image: url(../images/cover.jpg); 
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -119,10 +137,9 @@ md-checkbox.md-checked.checkBoxColor .md-icon {
       margin-top: 1vw;
 }
 .sign-up {
-   background-color: #12666b !important; 
+   background-color: #0f7789 !important; 
    width: 10vw; 
    height: 60px;
-   margin-left: 10vw;
    font-size: 1em;
 }
 #middel {
