--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,7 +278,7 @@ label{
 
   /*home menu*/
 .bg{
-  background-color: #004040 !important;
+  background-color: #1D7F8D !important;
   color: white !important;
 }
 /*
